tests/Support/override/classes/error/response/JSendErrorResponse.php
<?php

namespace Thirtybees\Core\Error\Response;

class JSendErrorResponse extends JSendErrorResponseCore
{

}
